--- a/app/src/main/res/layout/activity_main_part5_s2.xml
+++ b/app/src/main/res/layout/activity_main_part5_s2.xml
@@ -14,7 +14,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="32dp"
         android:text="Direct Financial Aid Platform"
         android:textAlignment="center"
         android:textSize="24sp"
@@ -24,11 +24,41 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <LinearLayout
+        android:id="@+id/linearLayoutSearchP5S2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="120dp"
+        android:layout_marginEnd="24dp"
+        android:background="@drawable/background_search1"
+        android:orientation="horizontal"
+        android:padding="5dp"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <androidx.appcompat.widget.SearchView
+            android:id="@+id/editTextDonationP5S2"
+            android:layout_width="0dp"
+            android:layout_height="48dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            app:queryHint="Search here...."
+            android:inputType="text"
+            android:singleLine="true"
+            android:textColor="@color/black"
+            android:textColorHint="@color/black"
+            app:iconifiedByDefault="false"/>
+
+
+    </LinearLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/locationListViewP5S2"
         android:layout_width="409dp"
         android:layout_height="550dp"
-        android:layout_marginTop="172dp"
+        android:layout_marginTop="202dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/node_item" />
@@ -43,7 +73,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="75dp"
         android:text="Please select for Financial Aid"
         android:textAlignment="center"
         android:textSize="18sp"
@@ -57,7 +87,7 @@
         android:layout_width="300dp"
         android:layout_height="30dp"
         android:layout_marginStart="60dp"
-        android:layout_marginTop="115dp"
+        android:layout_marginTop="70dp"
         android:background="@drawable/border4dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -67,7 +97,7 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="104dp"
-        android:layout_marginTop="750dp"
+        android:layout_marginTop="780dp"
         android:text="Back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/locationListViewP5S2"
