--- a/app/src/main/res/layout/activity_main_part5_s3.xml
+++ b/app/src/main/res/layout/activity_main_part5_s3.xml
@@ -146,12 +146,12 @@
 
     <Button
         android:id="@+id/calculateButtonP5S3"
-        android:layout_width="wrap_content"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="80dp"
+        android:layout_marginStart="75dp"
         android:layout_marginTop="648dp"
         android:text="Calculate"
-        android:backgroundTint="@color/black"
+        android:backgroundTint="@color/purple"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -159,10 +159,10 @@
         android:id="@+id/donateButtonP5S3"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="200dp"
+        android:layout_marginStart="205dp"
         android:layout_marginTop="648dp"
         android:text="Donate"
-        android:backgroundTint="@color/black"
+        android:backgroundTint="@color/purple"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
