--- a/app/src/main/res/layout/activity_main_part5_s9.xml
+++ b/app/src/main/res/layout/activity_main_part5_s9.xml
@@ -15,6 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:layout_marginTop="40dp"
         android:text="Food Bank and Shelter Locations"
         android:textSize="22sp"
         android:textStyle="bold" />
@@ -25,19 +26,50 @@
         android:gravity="center"
         android:textSize="16sp"
         android:layout_marginTop="5dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="15dp"
         android:text="Please click to view location" />
+
+    <LinearLayout
+        android:id="@+id/linearLayoutSearchP5S2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        android:background="@drawable/background_search1"
+        android:orientation="horizontal"
+        android:padding="5dp"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <androidx.appcompat.widget.SearchView
+            android:id="@+id/editTextDonateLocationP5S9"
+            android:layout_width="0dp"
+            android:layout_height="48dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            app:queryHint="Search here...."
+            android:inputType="text"
+            android:singleLine="true"
+            android:textColor="@color/black"
+            android:textColorHint="@color/black"
+            app:iconifiedByDefault="false"/>
+
+
+    </LinearLayout>
 
     <View
         android:id="@+id/sortView"
         android:layout_width="match_parent"
-        android:layout_height="20dp"
-        android:layout_marginTop="30dp"
-        android:layout_margin="5dp"
-        android:layout_marginBottom="5dp"
+        android:layout_height="5dp"
+        android:layout_margin="1dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/border4dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/locationListViewP5S9"
